fixes html list that was defined without a class so jquery wanst adding data to it. Also dudadornelles just dropped by and saved me half an hour here by pointing a typo

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,8 +6,15 @@
 </head>
 <body>
     <h1>Places</h1>
-    <ul>place-list</ul>
-    <script src="../../bower_components/jquery/src/jquery.js"></script>
+
+    <form>
+        <legend>New Place</legend>
+        <input name="name" placeholder="Place"></br>
+        <input type="submit">
+    </form>
+
+    <ul class="place-list"></ul>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="client.js"></script>
 </body>
 </html>
