adds css to start making it look nicer than just a blank page

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="home.css"/>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
     <h1>Places</h1>
 
-    <form>
+    <form id="new-place">
         <legend>New Place</legend>
         <input name="name" placeholder="Place"></br>
         <input type="submit">
