includes more css stuff and mouse over events

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,7 +10,7 @@
 
     <form id="new-place">
         <legend>New Place</legend>
-        <input name="name" placeholder="Place"></br>
+        <input name="name" placeholder="Where do you want to go?"></br>
         <input type="submit">
     </form>
 
