animates delete gif

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Places</h1>
+    <h1>Places To Go</h1>
 
     <form id="new-place">
         <legend>New Place</legend>
