includes form and server changes to pass address info to db

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -11,6 +11,7 @@
     <form id="new-place">
         <legend>New Place</legend>
         <input name="name" placeholder="Where do you want to go?"></br>
+        <input name="address" placeholder="Where is this place?"></br>
         <input type="submit">
     </form>
 
