styles the box to look like a cube. Moves elements into a div to allow them for horizontal placing.

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -14,8 +14,9 @@
         <input name="address" placeholder="Where is this place?"></br>
         <input type="submit">
     </form>
-
-    <ul class="place-list"></ul>
+    <div class="container">
+      <ul class="place-list"></ul>
+    </div style="display:inline;">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="client.js"></script>
 </body>
