breaks client.js elements in smaller pieces. Adds div to the form area

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
     <h1>Places To Go</h1>
-
-    <form id="new-place">
-        <legend>New Place</legend>
-        <input name="name" placeholder="Where do you want to go?"></br>
-        <input name="address" placeholder="Where is this place?"></br>
-        <input type="submit">
-    </form>
+    <div class="form-area">
+      <form id="new-place">
+          <legend>New Place</legend>
+          <input name="name" placeholder="Where do you want to go?"></br>
+          <input name="address" placeholder="Where is this place?"></br>
+          <input type="submit">
+      </form>
+    </div>
     <div class="container">
       <ul class="place-list"></ul>
     </div style="display:inline;">
