--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="home.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/home.css"/>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
